[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ledgix-python"
version = "0.4.0"
description = "Agent-agnostic compliance shim for SOX 404 policy enforcement via the ALCV Vault"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Ledgix", email = "team@ledgix.dev" }]
keywords = ["ai", "agents", "compliance", "sox404", "vault", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "cachetools>=5.3.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PyJWT[crypto]>=2.8.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1.0"]
llamaindex = ["llama-index-core>=0.10.0"]
crewai = ["crewai>=0.1.0"]
yaml = ["pyyaml>=6.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "respx>=0.21.0",
    "build>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ledgix-dev/python-sdk"
Documentation = "https://docs.ledgix.dev"
Repository = "https://github.com/ledgix-dev/python-sdk"

[tool.hatch.build.targets.wheel]
packages = ["src/ledgix_python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["ledgix_python"]

[tool.coverage.report]
show_missing = true
fail_under = 80
